@@ -1,5 +1,8 @@
 CHANGELOG
 
+UNRELEASED
+  * FIX: allow passing the `length` parameter, fix `searchParameters` iteration
+
 2.3.1 - 2015-09-02
   * CHORE: add a console.error() when passing unknown parameters
   * FIX: add offset/length undocumented search parameters
